--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,22 +1,18 @@
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 #canvas {
   border: 1px solid black;
+}
+
+.bg-header {
+  background: url(https://images.pexels.com/photos/1906606/pexels-photo-1906606.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2) center center no-repeat;
+  background-attachment: fixed;
+}
+
+.bg-quote {
+  background: url(https://images.pexels.com/photos/10660567/pexels-photo-10660567.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2) center center no-repeat;
+  background-attachment: fixed;
+}
+
+.bg-footer {
+  background: url(https://images.pexels.com/photos/1157151/pexels-photo-1157151.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2) center center no-repeat;
+  background-attachment: fixed;
 }
